fixed footer page overflow

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ button:active {
 footer {
   width: 100%;
   text-align: center;
-  padding: 25px;
+  padding: 20px 0 20px 0;
   position: absolute;
   bottom: 0;
   background-color: #6d0020;
